# metashade

./: .gitignore  AGENTS.md  README.md  a.spv  llms.txt  pyproject.toml
.github/workflows/: python-package.yml
examples/: Examples.md  create_generator.py  misc.py
gltfdemo/: README.md  __init__.py  _impl.py  generate.py
maya/scenes/: simple.mb
metashade/: __init__.py  modules.py  util.py
metashade/_base/: README.md  context.py  dtypes.py  generator.py  profile.py
metashade/_clike/: README.md  arrays.py  context.py  dtypes.py  generator.py  profile.py  struct.py
metashade/_rtsl/: README.md  dtypes.py  generator.py  profile.py  qualifiers.py  vk.py
metashade/base/: context.py  data_types.py  profile.py
metashade/clike/: __init__.py  context.py  data_types.py  dtypes.py  profile.py  struct.py
metashade/glsl/: dtypes.py  frag.py  generator_base.py  glslang.py  glslc.py  stage_interface.py
metashade/gltf/: README.md  generate.py
test/: basic.py  fx.py  test.py
tests/: README.md  _auto_float_intrinsics.py  _auto_numeric_intrinsics.py  _base.py  _exports.py  conftest.py  fail.hlsl  test_arithmetic.py  test_arrays.py  test_augmented_assignments.py  test_augmented_swizzle.py  test_basic.py  test_comment.py  test_dtypes.py  test_dxc.py  test_float_intrinsics.py  test_functions.py  test_fx.py  test_glsl_simple_frag.py  test_glsl_simple_fs.py  test_glsl_version.py  test_if.py  test_instantiate.py  test_intrinsics.py  test_precedence.py  test_reverse_operators.py  test_samplers.py  test_scopes.py  test_swizzling.py  test_uniforms.py  test_vector_init.py
(+141 files in other folders)
